overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -44,16 +44,19 @@ body {
 }
 .content {
     flex: 1 0 auto; /* Prevent Chrome, Opera, and Safari from letting these items shrink to smaller than their content's default minimum size. */
-    padding: 20px;
+    padding: 16px;
+    overflow: auto;
 }
 header {
     background-color: white;
     border-bottom: 4px solid #00a41a;
     padding: 10px 0 0;
+    height: 100px;
 }
 
 img {
     width: 100%;
+    height: 100%;
 }
 
 .menu-icon-width {
